--- a/devsInterviewTask-main/style.css
+++ b/devsInterviewTask-main/style.css
@@ -50,9 +50,10 @@
 	text-align: center;
 	margin: auto;
 	padding: 10px;
-	background-color: lightgrey;
+	background-color: grey;
 	font-weight: 700;
 	margin-bottom: 20px;
+	
 }
 
 .option-success{
@@ -61,7 +62,8 @@
 	border-radius: 25px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: green;
+	border-color: #3b7f65;
+	color: #3b7f65;
 	text-align: center;
 	margin: auto;
 	padding: 10px;
@@ -76,7 +78,8 @@
 	border-radius: 25px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: red;
+	border-color: #BF4A56;
+	color: #BF4A56;
 	text-align: center;
 	margin: auto;
 	padding: 10px;
@@ -93,7 +96,7 @@
 
 }
 
-.evaluate_btn{
+.standard-btn{
 	color: #5E64C4;
 	font-weight: 700;
 	font-size: 24px;
@@ -106,33 +109,15 @@
 	display: flex;	
 }
 
-.evaluate_btn:hover{
+.standard-btn:hover{
 	background-color: #5E64C4;
 	color: white;
 }
 
-.evaluate_btn:focus{
+.standard-btn:focus{
 	background-color: #5E64C4;
 	color: white;
 	border-color: #5E64C4;
-}
-
-.next_btn{
-	color: #5E64C4;
-	font-weight: 700;
-	font-size: 24px;
-	border-color: #5E64C4;
-	background-color: white;
-	border-radius: 10px;
-	padding: 5px 10px 5px 10px;
-	text-align: center;
-	margin: auto;
-	display: flex;	
-}
-
-.next_btn:hover{
-	background-color: #5E64C4;
-	color: white;
 }
 
 .row{
@@ -145,7 +130,6 @@
 	background-color: #3b7f65;
 	font-size: 24px;
 	color: white;
-	border-radius: 20px;
 	text-align: center;
 	padding: 30px;
 	width: 100%;
@@ -159,34 +143,56 @@
 	background-color: #BF4A56;
 	font-size: 24px;
 	color: white;
-	border-radius: 20px;
 	text-align: center;
 	padding: 30px;
 	width: 100%;
 	height: 100px;
 	margin-top: 50px;
+	margin-bottom: 50px;
 	display: none;
 
 }	
 
-.next_btn{
-	color: #5E64C4;
-	font-weight: 700;
-	font-size: 24px;
-	border-color: #5E64C4;
-	background-color: white;
-	border-radius: 10px;
-	padding: 5px 10px 5px 10px;
-	text-align: center;
-	margin: auto;
-	display: flex;	
-}
-
 .progress{
 	height: 30px !important;
-	background-color: #636363 !important;
+	background-color: lightgray !important;
 	border-radius: 100px !important;
 	margin: 30px auto auto auto !important;
 	width: 80%;
 	
 }
+
+.progress-bar{
+	background-color: #5E64C4 !important;
+}
+
+.img-container{
+	display: flex;
+	justify-content: center;
+	margin: 40px;
+}
+
+.img-container img {
+	width: 600px;
+}
+
+.show-score h1 {
+	margin: 30px;
+    font-size: 30px;
+    text-align: center;
+    color: #636363;
+}
+
+.show-score h2{
+	color: white;
+	background-color: #45a27a;
+    height: 40px;
+    text-align: center;
+	border-radius: 10px;
+	text-transform: uppercase;
+    font-size: 18px;
+	padding: 8px;
+	font-weight: 750;
+	margin-bottom: 50px
+}
+
