--- a/devsInterviewTask-main/style.css
+++ b/devsInterviewTask-main/style.css
@@ -8,17 +8,19 @@
 	padding-right: 30px;
     padding-left: 30px;
 }
+
 .unchosen{
 	transition: all 0.15s;
 	border-style: solid ;
 	border-width: 2px;
 }
+
 .chosen{
 	transition: all 0.15s;
 	border-style: solid  ;
 	border-width: 4px;
-
 }
+
 .option{
 	width: auto;
 	height: auto;
@@ -37,23 +39,25 @@
 	cursor: pointer;
 	background-color: white;
 	font-weight: 700;
+	color: #323131;
+	border-color: #323131;
+	border-width: 2px;
 }
-
 
 .option-selected{
 	width: auto;
 	height: auto;
+	color: #323131;
 	border-radius: 25px;
 	border-style: solid;
 	border-width: 2px;
-	border-color: #636363;
+	border-color: #323131;
 	text-align: center;
 	margin: auto;
 	padding: 10px;
-	background-color: grey;
+	background-color: rgb(231, 231, 231);
 	font-weight: 700;
 	margin-bottom: 20px;
-	
 }
 
 .option-success{
@@ -93,7 +97,6 @@
 	font-size:16px;
 	color:#0000ff;
 	text-align: center;
-
 }
 
 .standard-btn{
@@ -150,7 +153,6 @@
 	margin-top: 50px;
 	margin-bottom: 50px;
 	display: none;
-
 }	
 
 .progress{
@@ -159,7 +161,6 @@
 	border-radius: 100px !important;
 	margin: 30px auto auto auto !important;
 	width: 80%;
-	
 }
 
 .progress-bar{
@@ -186,13 +187,40 @@
 .show-score h2{
 	color: white;
 	background-color: #45a27a;
-    height: 40px;
+    height: 50px;
     text-align: center;
 	border-radius: 10px;
 	text-transform: uppercase;
     font-size: 18px;
-	padding: 8px;
+	padding: 13px;
 	font-weight: 750;
-	margin-bottom: 50px
+	width: 50%;
+    margin: 30px auto;
 }
 
+.start-again-btn{
+	color: #5E64C4;
+	font-weight: 700;
+	font-size: 24px;
+	border-color: #5E64C4;
+	background-color: white;
+	border-radius: 10px;
+	padding: 5px 10px 5px 10px;
+	text-align: center;
+	margin: auto;
+	display: flex;	
+	justify-content: center;
+	text-align: center;
+	width: 50%;
+}
+
+.start-again-btn:hover{
+	background-color: #5E64C4;
+	color: white;
+}
+
+.start-again-btn:focus{
+	background-color: #5E64C4;
+	color: white;
+	border-color: #5E64C4;
+}
