--- a/devsInterviewTask-main/style.css
+++ b/devsInterviewTask-main/style.css
@@ -169,7 +169,7 @@
 
 .progress-bar{
 	background-color: #5E64C4 !important;
-	width: 33%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100;
+	width: 33%;
 }
 
 .img-container{
